[package]
name = "touch-fish"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "moyu"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rquickjs = { version = "0.6" }
toml = "0.8"
dirs = "5"
unicode-width = "0.2"
scraper = "0.20"
ego-tree = "=0.6.3"
anyhow = "1"
thiserror = "1"
futures = "0.3"
quick-xml = "0.36"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"
